# banrepco_api

./: .dockerignore  .env.template  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  worker-configuration.d.ts  wrangler.jsonc
.github/: dependabot.yml
api/: .env.template  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
api/assets/: inflation.csv  trm.csv
api/scripts/: start.sh
api/src/: main.py
api/src/db/: db_engine.py  session.py
api/src/db/migrations/: 6f7933d46b52_change_inflation_rate_field_name_to_.py
api/src/db/scripts/: populate_inflation.py  populate_trm.py
api/src/models/: inflation.py  trm.py
api/src/routes/: health.py
api/src/routes/v1/: inflation.py  trm.py
api/src/schemas/: health.py  inflation.py  trm.py
api/src/use_cases/: inflation.py  trm.py
api/tests/: conftest.py  test_health.py
api/tests/v1/: test_inflation_api.py  test_trm_api.py
assets/: trm.csv
js/: worker-configuration.d.ts
js/src/: index.ts  scheduledTask.ts
js/src/services/: db.ts  inflation.ts  trm.ts
scripts/: start_scheduler.sh
src/: main.py
src/config/: enums.py
src/db/: db_engine.py  env.py  session.py
src/db/migrations/: 30d2f385c777_create_inflation_table.py  6e56d4d9e63d_create_trm_table.py  6f7933d46b52_change_inflation_rate_field_name_to_.py
src/db/scripts/: populate_inflation.py  populate_trm.py
src/jobs/: __init__.py  scheduler.py
src/jobs/tasks/: get_daily_trm.py
src/models/: inflation.py  trm.py
src/routes/: health.py
src/routes/v1/: inflation.py  trm.py
src/schemas/: inflation.py
src/use_cases/: inflation.py  trm.py
tests/: conftest.py
tests/v1/: test_inflation_api.py  test_trm_api.py
