[project]
name = "banrepco-api"
version = "0.1.0"
description = "Useful catalog of APIs for the Bank of the Republic of Colombia"
authors = [{ name = "Kevin Rodríguez", email = "kyrodriguez97@gmail.com" }]
requires-python = ">=3.13,<3.15"
readme = "README.md"
dependencies = [
    "alembic==1.18.1",
    "fastapi-pagination==0.15.10",
    "fastapi[standard]==0.129.0",
    "sqlalchemy-libsql==0.2.0",
    "uvicorn==0.40.0",
]

[dependency-groups]
test = [
    "pytest==8.4.2",
    "pytest-env==1.2.0",
    "pytest-cov==7.0.0",
]
dev = [
    "pre-commit==4.3.0",
    "isort==7.0.0",
    "black==25.9.0",
    "flake8==7.3.0",
]

[tool.uv]
package = false
